tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceMessageReference-4B/InterfaceMessageReference.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceMessageReference-4B/InterfaceMessageReference.wsdl -->
<!-- Copyright © 2007-03-23 05:52 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a invalid use of WSDL 2.0 interface 
		message reference. When an element is specified it
		must reference a defined element.
		
		This document violates assertion InterfaceMessageReference-1036.
	</wsdl:documentation>
	
	<wsdl:interface name="myInterface">
		<wsdl:operation name="myOperation" pattern="http://www.w3.org/ns/wsdl/in-only">
			<wsdl:input messageLabel="myLabel" element="tns:invalidElement"/>
		</wsdl:operation>
	</wsdl:interface>

</wsdl:description>
